# face_recognition_cpp

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  embedding.cpp  test_2.cpp
cpp/: utils.cpp  utils.h
face_recognition_cpp/: README.md  demo.cpp  test_2.cpp
